--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,8 @@ language: python
 sudo: false
 python:
   - "2.7"
-addons:
-  apt:
-    packages:
-    - libblas-dev
-    - liblapack-dev
-    - gfortran
 before_install:
   - pip install -U pip
 install:
-  - travis_wait travis_retry pip install -r requirements.txt
-  - travis_retry pip install python-coveralls
-  - travis_retry python setup.py dev
-cache:
-  - apt
-  - directories:
-    - $HOME/.cache/pip
-    - $HOME/.theano
+  - pip install -r requirements.txt
+  - python setup.py install
