--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 python:
   - "2.7"
 before_install:
-  - pip install -U pip
+  - pip install --upgrade pip
 install:
   - pip install -r requirements.txt
   - python setup.py install
