--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: python
 sudo: required
 python:
   - "2.7"
+addons:
+  apt:
+    packages:
+    - libblas-dev
+    - liblapack-dev
+    - gfortran
 before_install:
   - pip install --upgrade pip
 install:
