--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: required
 python:
   - "2.7"
 before_install:
+  - sudo apt-get update -qq
   - sudo apt-get install -y libblas-dev liblapack-dev libatlas-base-dev gfortran
   - pip install --upgrade pip
 install:
