--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 sudo: required
 python:
-  - "2.7"
+  - 2.7
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y libblas-dev liblapack-dev libatlas-base-dev gfortran
@@ -9,6 +9,11 @@ before_install:
 install:
   - pip install -r requirements.txt
   - python setup.py install
-script: nosetests
+  - pip install coveralls
+script:
+  - nosetests
 after_success:
   - coveralls
+notifications:
+  email:
+  - philippe.chavanne@gmail.com
