--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,19 @@ sudo: required
 python:
   - 2.7
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y libblas-dev liblapack-dev libatlas-base-dev gfortran
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
   - pip install --upgrade pip
 install:
   - pip install -r requirements.txt
   - python setup.py install
   - pip install coveralls
 script:
-  - nosetests
+  - nosetests --with-cov --cov dl --cov-config .coveragerc --logging-level=INFO
 after_success:
-  - coveralls
+  - coveralls --config_file .coveragerc
 notifications:
-  email:
-  - philippe.chavanne@gmail.com
+  email: philippe.chavanne@gmail.com
