--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,8 @@ sudo: required
 python:
   - 2.7
 before_install:
-  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda/bin:$PATH
-  - conda update --yes conda
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libblas-dev liblapack-dev libatlas-base-dev gfortran
   - pip install --upgrade pip
 install:
   - pip install -r requirements.txt
