--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pip install coverage
   - python setup.py install
 script:
-  - nosetests --with-coverage
+  - py.test --with-coverage
 after_success:
   - coveralls
 notifications:
