dl first commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ before_install:
   - pip install --upgrade pip
 install:
   - pip install -r requirements.txt
+  - pip instal pytest pytest-cov
   - pip install python-coveralls
   - pip install coverage
   - python setup.py install
 script:
-  - py.test --with-coverage
+  - py.test
 after_success:
   - coveralls
 notifications:
