dl first commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - pip install --upgrade pip
 install:
   - pip install -r requirements.txt
-  - pip instal pytest pytest-cov
+  - pip install pytest pytest-cov
   - pip install python-coveralls
   - pip install coverage
   - python setup.py install
