--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - pip install coverage
   - python setup.py install
 script:
-  - py.test
+  - py.test --ignore=build -cov
 after_success:
   - coveralls
 notifications:
