--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - pip install coverage
   - python setup.py install
 script:
-  - py.test -cov --ignore=build
+  - py.test -cov=dl --ignore=build
 after_success:
   - coveralls
 notifications:
