--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install python-coveralls
   - python setup.py install
 script:
-  - py.test
+  - py.test --ignore=build
 after_success:
   - coveralls
 notifications:
