--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ install:
   - pip install -r requirements.txt
   - pip install python-coveralls
   - python setup.py install
+  - echo "[global] " > ~/.theanorc
+  - echo "floatX = float32" >> ~/.theanorc
+
 script:
   - py.test --ignore=build --cov
 after_success:
