--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ include *.rst
 include *.txt
 include LICENSE
 
-recursive-include dl/tests *.py
+recursive-include yadll/tests *.py
 include .coveragerc
 recursive-include examples *.py
 recursive-include docs *.rst conf.py *.css Makefile
